--- a/app/globals.css
+++ b/app/globals.css
@@ -1,27 +1,51 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+/** {*/
+/*  box-sizing: border-box;*/
+/*}*/
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+/*html,*/
+/*body {*/
+/*  padding: 0;*/
+/*  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans,*/
+/*  Helvetica Neue, sans-serif;*/
+/*}*/
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
+/*a {*/
+/*  gap: 1rem;*/
+/*  color: inherit;*/
+/*  text-decoration: none;*/
+/*  !*padding: 0;*!*/
+/*  !*margin: 1rem;*!*/
+/*}*/
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-}
+/*main {*/
+/*  min-height: 100vh;*/
+/*  padding: 1rem 0;*/
+/*  display: flex;*/
+/*  flex-direction: column;*/
+/*  justify-content: flex-start;*/
+/*  align-items: flex-start;*/
+/*}*/
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
-}
+/*input, textarea {*/
+/*  display: block;*/
+/*  max-width: 300px;*/
+/*  margin: 0.5rem 0;*/
+/*}*/
+
+/*button {*/
+/*  background-color: #000000;*/
+/*  border: none;*/
+/*  color: white;*/
+/*  padding: 0.5rem 2rem;*/
+/*  text-align: center;*/
+/*  text-decoration: none;*/
+/*  display: inline-block;*/
+/*  cursor: pointer;*/
+/*}*/
+
+/*nav a {*/
+/*  font-weight: bold;*/
+/*  text-decoration: none; !* Remove underline *!*/
+/*  color: #333; !* Set link color *!*/
+/*  transition: color 0.3s ease; !* Smooth transition on hover *!*/
+/*}*/
